# sandbox

./: .gitignore  ideas.txt
rust/discord/: .env.example  Cargo.toml
rust/discord/src/: bot.rs  client.rs  cog.rs  error.rs  helpers.rs  http.rs  lib.rs  main.rs  prelude.rs
rust/discord/src/config/: settings.rs
rust/v/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
rust/v/scripts/: 0001-init.sql
rust/v/src/: constants.rs  lib.rs  main.rs  prelude.rs
rust/v/src/config/: error.rs  settings.rs
rust/v/src/db/: db.rs  error.rs  mod.rs  pool.rs  schema.rs  session.rs
rust/v/src/db/models/: error.rs  mod.rs
rust/v/src/db/models/account/: core.rs  error.rs  mod.rs  model.rs  service.rs
rust/v/src/db/models/char/: core.rs  error.rs  model.rs
rust/v/src/db/models/world/: error.rs
rust/v/src/inc/: helpers.rs
rust/v/src/io/: error.rs  mod.rs  read.rs  write.rs
rust/v/src/net/: error.rs  handshake.rs  login.rs  mod.rs  service.rs
rust/v/src/net/channel/: core.rs  error.rs
rust/v/src/net/packet/: core.rs  error.rs  mod.rs  read.rs  write.rs
rust/v/src/net/packet/handler/: auth.rs  default.rs  error.rs  mod.rs  result.rs  service.rs  tos.rs
rust/v/src/net/packet/handler/core/: action.rs  (+3 more)
rust/v/src/net/packet/io/: error.rs  read.rs  write.rs
rust/v/src/net/packet/validation/: core.rs  error.rs
rust/v/src/net/world/: core.rs  error.rs
rust/v/src/op/: recv.rs  send.rs
rust/v/src/runtime/: client.rs  error.rs  mod.rs  pool.rs  relay.rs  server.rs  session.rs  state.rs
rust/v/src/sec/: aes.rs  custom.rs  mod.rs
rust/v/src/server/: mod.rs  service.rs
rust/v/src/test_suite/: client.rs
(+103 files in other folders)
