[package]
name = "discord"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
config = "0.15.22"
dotenvy = "0.15.7"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
flate2 = { version = "1.1.9", features = ["zlib"] }
futures = "0.3.32"
log = "0.4.29"
os_info = "3.14.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls", "url"] }
