[package]
name = "v"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.7", features = ["postgres", "network-address"] }
ipnetwork = "0.21.1"
thiserror = "2"
aes = "0.9"
hex-literal = "1.1.0"
rand = "0.10.1"
byteorder = "1.5.0"
bcrypt = "0.19.0"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
