[package]
name = "v"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.7", features = ["postgres", "network-address", "r2d2"] }
ipnetwork = "0.21.1"
thiserror = "2"
aes = "0.9"
hex-literal = "1.1.0"
rand = "0.10.1"
byteorder = "1.5.0"
bcrypt = "0.19.0"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
regex = "1.12.3"
config = "0.15.22"
num-traits = "0.2.19"
num-derive = "0.4.2"
dotenvy = "0.15.7"
